css/main.css
@font-face {
    font-family: SignPainter;
    src: url(../SignPainter-HouseScript.ttf);
}
html, body {
  margin: 0;
  padding: 0;
  font-family: 'Source Sans Pro', sans-serif;
  text-rendering: optimizeLegibility;
  color: #222;
  overflow-x: hidden;
  background-image: url("../images/map.png");
}
h4 {
  font-size: 22px;
  margin-bottom: 28px;
}
p {
  font-size: 22px;
}
a,
a:hover,
a:active,
a:visited {
  text-decoration: none;
  color: #5000F1;
}

.homesection  h2 {
  font-size: 15px;
  letter-spacing: 0.15em;
  margin-top: 30px;
  clear: #022D41;
}
.homesection  a h2 {
  color: #222;
}
.homesection  a h2 span {
  transition: all 400ms cubic-bezier(0.68, -0.1, 0.265, 1.55);
}
.homesection  a:hover h2 span {
  color: #fff;
  margin-left: 10px;
}
.homesection  .white-block {
  margin-top: 20px;
  width: 46px;
  height: 6px;
  background: #00F1C9;
  margin-bottom: 20px;
}
.homesection .text{
   position:absolute;
   top: 40%;
   
}
.homesection h1 {
  color: #1AA6B7;
  font-family: SignPainter;
  font-size: 96px;
  font-weight: 900;
  letter-spacing: 0.1em;
  margin: 0 auto;
  top: 50%;
}
.homesection h1 span {
  display: inline-block;
  font-size: 20px;
  margin-top: 18px;
  vertical-align: top;
  letter-spacing: 0;
}
.homesection .title a {
  display: inline-block;
  margin-top: 6px;
  margin-right: -70px;
  /*background: #222;
  padding: 26px 80px;*/
  color: #fff;
  border-radius: 12px;
  font-size: 26px;
  letter-spacing: 0.2em;
  transition: all 300ms cubic-bezier(0.68, -0.1, 0.265, 1.55);
}
.homesection .title a:hover {
  margin-top: 6px;
  margin-right: -80px;
  padding: 0px 10px;
}
.homesection h3 {
  font-size: 21px;
}


/*----------------------------------
  Background Grid
------------------------------------*/


.grid {
  position: fixed;
  width: 100%;
}
.white-background {
  
  background-color: white;
}




.fixed-top {
  position: absolute;
  width: 600px;
  height: 600px;
  background: #00F1C9;
  border-radius: 12px;
  z-index: -1;
  margin-top: -220px;
  margin-left: 100px;
}
@keyframes slideleft {
    from {
        background-position: 0%;
    }
    
    to {
        background-position: 9000%;
    }
}

@-webkit-keyframes slideleft {
    from {
        background-position: 0%;
    }
    to {
        background-position: 9000%;
    }
}
.bg{
    height: 100vh;
    margin-left:-15px;
}
#bg2 {
    background-image: url('../images/background2.png');
    background-repeat: repeat-x;
    animation: slideleft 600s infinite linear;
    -webkit-animation: slideleft 600s infinite linear;
    width: 100%;
    height: 100vh;
    z-index: 2;
    position: absolute;
    background-size: auto 100%;

}
#bg1 {
    background-image: url('../images/background1.png');
    background-repeat: repeat-x;
    animation: slideleft 800s infinite linear;
    -webkit-animation: slideleft 800s infinite linear;
    width: 100%;
    height: 100vh;
    position: absolute;
    z-index: 1;
    background-size: auto 100%;

}
#bg3 {
    background-image: url('../images/background3.png');
    background-repeat: repeat-x;
    animation: slideleft 300s infinite linear;
    -webkit-animation: slideleft 300s infinite linear;
    width: 100%;
    height: 100vh;
    position: absolute;
    z-index: 3;
    background-size: auto 100%;

}
.homesection{
  z-index: 4;
  position: absolute;
  width: 100%;
}


/*----------------------------------
  Main
------------------------------------*/

main,
.main {
  overflow: hidden;

}

.section {
  position: relative;
  height: 100vh;
}



.absolute {
  position: absolute;
  width: 100%;
  height: auto;
  padding-top: 30px;
}
.absolute.above {
  z-index: 2;
}
.absolute h2 {
  font-size: 140px;
  font-weight: 900;
  letter-spacing: -0.04em;
  color: #F0F0F0;
  z-index: -1;
}



.phone_size{
  width: 60%;
}

.lg-green {
  width: 60px;
  height: 60px;
  background: #00F1C9;
  border-radius: 12px;
  /*margin-left: -80px;*/
  margin-top: 200px;
}
.head1 {
  /*width: 30px;
  height: 30px;
  background: #00F1C9;
  border-radius: 12px;
  margin-left: -30px;*/
  margin-top: 200px;
  position: absolute;
}
.head2 {

  margin-top: 400px;
  /*position: absolute;*/
}
.xs-green {
  width: 60px;
  height: 60px;
  background: #00F1C9;
  border-radius: 12px;
  margin-left: -30px;
  margin-top: 400px;
}
.md-green {
  width: 120px;
  height: 120px;
  background: #00F1C9;
  border-radius: 12px;
  margin-left: -60px;
  margin-top: 10px;
}
.lg-purple {
  width: 80px;
  height: 80px;
  background: #5000F1;
  border-radius: 12px;
  margin-left: 57px;
  margin-top: 60px;
}





.date {
  margin-top: 250px;
  font-size: 48px;
  font-weight: 600;
  color: #5000F1;
}
.temp {
  margin-top: 200px;
  font-size: 280px;
  font-weight: 900;
  letter-spacing: -0.07em;
  color: #5000F1;
}







.text-editor {
  background: #222;
  padding: 60px 50px;
  border-radius: 12px;
  margin-left: 15px;
}
code {
  text-align: left;
  padding: 0;
  font-size: 22px;
  background: none;
  border-radius: 0;
  color: #00F1C9;
}



.md-facebook {
  width: 60px;
  height: 60px;
  background: #5000F1;
  border-radius: 12px;
  margin-left: 68px;
  margin-top: 600px;
}
.md-twitter {
  width: 120px;
  height: 120px;
  background: #00F1C9;
  border-radius: 12px;
  margin-left: -60px;
  margin-top: 60px;
}
.md-dixonandmoe {
  width: 120px;
  height: 120px;
  background: #5000F1;
  border-radius: 12px;
  margin-left: -60px;
  margin-top: 760px;
}
.bt-green {
  width: 60px;
  height: 60px;
  background: #00F1C9;
  border-radius: 12px;
  margin-left: -30px;
  margin-top: 700px;
}
.bt-purple {
  width: 80px;
  height: 80px;
  background: #5000F1;
  border-radius: 12px;
  margin-left: 57px;
  margin-top: 600px;
}

.share {
  position: relative;
  top: -240px;
}
.share a {
  font-size: 34px;
}
.share a span {
  transition: all 400ms cubic-bezier(0.68, -0.1, 0.265, 1.55);
}
.share a:hover span {
  margin-left: 10px;
}

a.dam,
a.dam:hover,
a.dam:active,
a.dam:visited {
  color: #222;
}

span.purple {
  color: #5000F1;
}
span.green {
  color: #A0F100;
}
span.white {
  color: #fff;
}


@-webkit-keyframes fuzz /* Safari and Chrome */ {
  0% {
    opacity: 0;
  }
  40% {
    opacity: 0;
  }
  100% {
    /*-webkit-transform: scaleY(1);*/
    opacity: 1;
  }
}

@-webkit-keyframes fuzz2 /* Safari and Chrome */ {
  0% {
    opacity: 0;
  }
  48% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@-webkit-keyframes fuzz3 /* Safari and Chrome */ {
  0% {
    opacity: 0;
  }
  54% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}





@-webkit-keyframes stretch /* Safari and Chrome */ {
  0% {
    -webkit-transform: scaleX(0);
    opacity: 0;
  }
  50% {
    -webkit-transform: scaleX(0);
    opacity: 1;
  }
  60% {
    -webkit-transform: scaleX(0);
  }
  100% {
    -webkit-transform: scaleX(1);
  }
}

@-webkit-keyframes fadeInUp {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0, 20px, 0);
  }
  30% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}







/*----------------------------------
  Medium devices: iPad vertical
------------------------------------*/

@media (max-width: 991px) {


}



/*----------------------------------
  Small devices: iPhone 6+ and below
------------------------------------*/

@media (max-width: 767px) {


}


/*----------------------------------
  iPhone 6 & 6+ specific text bump
------------------------------------*/

@media (max-width: 991px) and (max-height: 736px) and (min-height: 481px) {


}

